versioned_docs/version-2.7/reference/subsystems/lambdex.mdx
---
title: lambdex
description: |
  A tool for turning .pex files into AWS Lambdas (https://github.com/wickman/lambdex).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

A tool for turning .pex files into AWS Lambdas (https://github.com/wickman/lambdex).

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[lambdex]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `version`

<Option
  cli_repr={`--lambdex-version=<str>`}
  env_repr='PANTS_LAMBDEX_VERSION'
  toml_repr={`[lambdex]
version = <str>`}
  default_repr={`lambdex==0.1.5`}
>

Requirement string for the tool.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--lambdex-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_LAMBDEX_EXTRA_REQUIREMENTS'
  toml_repr={`[lambdex]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--lambdex-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_LAMBDEX_INTERPRETER_CONSTRAINTS'
  toml_repr={`[lambdex]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "CPython>=3.6,<3.10"\n]`}
>

Python interpreter constraints for this tool.

</Option>

### `lockfile`

<Option
  cli_repr={`--lambdex-lockfile=<str>`}
  env_repr='PANTS_LAMBDEX_LOCKFILE'
  toml_repr={`[lambdex]
lockfile = <str>`}
  default_repr={`<default>`}
>

Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python-setup].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.7.2/src/python/pants/backend/awslambda/python/lambdex_lockfile.txt for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds.

To use a custom lockfile, set this option to a file path relative to the build root, then run `./pants generate-lockfiles --resolve=lambdex`.

Lockfile generation currently does not wire up the `[python-repos]` options. If lockfile generation fails, you can manually generate a lockfile, such as by using pip-compile or `pip freeze`. Set this option to the path to your manually generated lockfile. When manually maintaining lockfiles, set `[python-setup].invalid_lockfile_behavior = 'ignore'`.

</Option>

### `console_script`

<Option
  cli_repr={`--lambdex-console-script=<str>`}
  env_repr='PANTS_LAMBDEX_CONSOLE_SCRIPT'
  toml_repr={`[lambdex]
console_script = <str>`}
  default_repr={`lambdex`}
>

The console script for the tool. Using this option is generally preferable to (and mutually exclusive with) specifying an --entry-point since console script names have a higher expectation of staying stable across releases of the tool. Usually, you will not want to change this from the default.

</Option>

### `entry_point`

<Option
  cli_repr={`--lambdex-entry-point=<str>`}
  env_repr='PANTS_LAMBDEX_ENTRY_POINT'
  toml_repr={`[lambdex]
entry_point = <str>`}
  default_repr={`None`}
>

The entry point for the tool. Generally you only want to use this option if the tool does not offer a --console-script (which this option is mutually exclusive with). Usually, you will not want to change this from the default.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
